--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="menu_gallery">Agregar Motos</string>
     <string name="menu_slideshow">Comparar Motos</string>
     <string name="menu_MiMoto">Mi Moto Ideal</string>
+    <string name="menu_Estadistica">Estadistica</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
